testing/tests/path/not_existent.stderr
error: Failed to open file "$WORKSPACE/target/tests/testing/src/some_path.rs": Os { code: 2, kind: NotFound, message: "No such file or directory" }
 --> tests/path/not_existent.rs:5:8
  |
5 | #[into("crate::some_path::IntoStruct")]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
